# barscnn

./: .gitignore  Cargo.toml
crates/alpha/: Cargo.toml
crates/alpha/src/: main.rs  training.rs  viz.rs
crates/cnn/: Cargo.toml
crates/cnn/src/: activation.rs  fc.rs  feature.rs  filter.rs  flatten.rs  layer.rs  lib.rs  linear.rs  matrix.rs  pool.rs  rand.rs  softmax.rs
crates/cnn/src/image/: bmp.rs  mod.rs  pixel.rs
src/image/: activation.rs  bmp.rs  feature.rs  filter.rs  flatten.rs  layer.rs  linear.rs  mod.rs  pixel.rs  pool.rs
